--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,8 @@ body {
   justify-content: center;
   min-height: 100vh;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   background-color: #fff;
   color: #212121;
 }
@@ -108,6 +108,7 @@ body {
   height: auto;
   max-height: 100vh;
   max-width: 100vw;
+  cursor: pointer;
 }
 
 .lightbox__button {
@@ -128,7 +129,7 @@ body {
   cursor: pointer;
   transition: background-color var(--animation-duration) var(--timing-function);
   outline: none;
-  background-image: url('../images/icon-close.svg');
+  background-image: url("../images/icon-close.svg");
   background-position: center;
   background-size: 60%;
   background-repeat: no-repeat;
